--- a/index.html
+++ b/index.html
@@ -31,8 +31,25 @@
 		<link rel="preload" as="image" href="./assets/images/hero-slider-2.jpg" />
 		<link rel="preload" as="image" href="./assets/images/hero-slider-3.jpg" />
 	</head>
+
 	<body>
+		<!-- Preloader -->
+		<div class="preload" data-preload>
+			<div class="circle"></div>
+			<p class="text">Grilli</p>
+		</div>
+
 		<!-- Custom js link -->
 		<script src="./assets/js/script.js"></script>
+
+		<!-- Ionicon link -->
+		<script
+			type="module"
+			src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
+		></script>
+		<script
+			nomodule
+			src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
+		></script>
 	</body>
 </html>
